# TheQuantumBroker

./: .gitignore  README.md  TODO.txt  backends.json  circ.qasm  config.ini  debug_model.lp  evaluator.py  evaluator_sim.py  example_force_backend_model.json  example_limit_max_time_model.json  example_minimize_cost_model.json  example_minimize_number_of_backends_model.json  example_model_expr.json  example_per_backend_time_model.json  example_weighted_sum_model.json  examples.txt  expression_parser.py  expression_utils.py  fidelity_model.json  intermediate_representation.py  linear_problem_model.py  profiles.json  pyproject.toml  qb.py  requirements.txt  scenario1.json  scenario2.json  scenario3.json  solve_lp.py  solver_utils.py  solvers.py  test.json  time_model.json  time_vs_cost_model.json
cache/: fake_fez.json  fake_kyiv.json  fake_kyoto.json  fake_marrakesh.json  fake_sherbrooke.json  fake_singapore.json  fake_torino.json  simulator_profiles.json
circuits/: dj_10.json  dj_6.json  dj_8.json  qaoa_10.json  qaoa_6.json  qaoa_8.json  qft_10.json  qft_6.json  qft_8.json  qnn_10.json  qnn_6.json  qnn_8.json  realamprandom_10.json  realamprandom_6.json  realamprandom_8.json  twolocalrandom_10.json  twolocalrandom_6.json  twolocalrandom_8.json  vqe_10.json  vqe_6.json  vqe_8.json
docs/: model_expression_reference.md
results/: linear_circ_example_force_backend_model.json  linear_circ_fidelity_model.json  linear_circ_scenario1.json  linear_circ_scenario2.json  linear_circ_scenario3.json  linear_circ_test.json  linear_circ_time_model.json  nonlinear_circ_time_model.json  (+2 more)
(+18 files in other folders)
