[tool.poetry]
name = "quantum-broker"
version = "0.1.0"
description = ""
authors = ["GBisi <giuseppe.bisicchia@phd.unipi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
quantum-executor = "^0.0.2"
tqdm = "^4.67.1"
notebook = "^7.4.1"
ipykernel = "^6.29.5"
numba = "^0.61.2"
pulp =  "^3.1.1"
asteval = "^0.9.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
